--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,11 +11,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   flyway:
     baseline-on-migrate: true
-    schemas: order
+    schemas: t_order
   jpa:
     properties:
       hibernate:
-        default_schema: order
+        default_schema: t_order
   redis:
     host: max-redis
     port: 6379
