--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: 0
 
 spring:
   application:
     name: max-order
   datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB}
-    username: ${POSTGRES_USER:postgres}
-    password: ${POSTGRES_PASSWORD:Post123321}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/max}
+    username: ${POSTGRES_USER:max}
+    password: ${POSTGRES_PASSWORD:max}
     driver-class-name: org.postgresql.Driver
   flyway:
     baseline-on-migrate: true
@@ -17,7 +17,7 @@ spring:
       hibernate:
         default_schema: t_order
   redis:
-    host: max-redis
+    host: redis
     port: 6379
 
 management:
@@ -32,7 +32,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://${DISCOVERY_HOST}:8761/eureka/
+      defaultZone: http://${DISCOVERY_HOST:max-discovery}:8761/eureka/
 
 springdoc:
   api-docs:
